k8s/admin-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-api
  namespace: eshops

spec:
  type: ClusterIP

  selector:
    app: admin-api

  ports:
    - port: 4100
      targetPort: 4100
      protocol: TCP
